# SerialChart

./: README.md
Clion_Proj/: CMakeLists.txt  SerialChart.pro  SerialChart.pro.user.3.2-pre1  chart.cpp  chart.h  common.h  configuration.cpp  configuration.h  decoderbase.cpp  decoderbase.h  decoderbin.cpp  decoderbin.h  decodercsv.cpp  decodercsv.h  decoderhdlc.cpp  decoderhdlc.h  decoderplugin.cpp  decoderplugin.h  displaybase.cpp  displaybase.h  hiddevice.cpp  hiddevice.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.txt  plugin.cpp  plugin.h  portbase.cpp  portbase.h  porthid.cpp  porthid.h  portrs232.cpp  portrs232.h  resources.qrc  serialchartjs.cpp  serialchartjs.h
